--- a/spanresources/static/css/style.css
+++ b/spanresources/static/css/style.css
@@ -10,8 +10,8 @@
 
 body {
     padding-top: 56px;
-    background: #0d0d0d;
-    color: #b7ab98;
+    background: #6421BA;
+    color: #ba2177;
   }
   
   body nav.fixed-top {
@@ -19,7 +19,7 @@ body {
   }
   
   nav {
-    background-color: #b7ab98;
+    background-color: #ba2177;
   }
   
   .fixed-top {
