--- a/spanresources/templates/400.html
+++ b/spanresources/templates/400.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-12">
         <h1 class="display-5 fw-bold mb-3">408</h1>
-        <p>Looks like the server timed out while trying to do that. Oops!</p>
+        <p>El servidor se ha cansado de esperar. Looks like the server timed out while trying to do that. ¡Lo sentimos!</p>
         <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">Go Home</a>
         <p class="mt-5">{{error_message}}</p>
       </div>
