Added comment on the 400 error page to remind myself and others of what a 400 error means

--- a/spanresources/templates/400.html
+++ b/spanresources/templates/400.html
@@ -1,4 +1,13 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+
+{# 
+    400 Bad Request:
+    This error means the server cannot or will not process the request 
+    because something is wrong with the client's request.
+    Common causes: malformed request syntax, invalid data, bad query params, etc.
+  #}
+
+{% block content %}
 <section>
   <div class="container mt-5 text-center">
     <div class="row">
