--- a/spanresources/templates/403.html
+++ b/spanresources/templates/403.html
@@ -1,4 +1,12 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+
+{# 
+    403 Forbidden:
+    This error means the server understood the request but refuses to authorize it.
+    Common causes: lack of proper permissions, authentication failure, or trying to access a restricted resource.
+  #}
+
+{% block content %}
 <section>
   <div class="container mt-5 text-center">
     <div class="row">
