--- a/spanresources/templates/404.html
+++ b/spanresources/templates/404.html
@@ -1,3 +1,14 @@
 {% extends "base.html" %} {% block content %}
-
+<section>
+  <div class="container mt-5 text-center">
+    <div class="row">
+      <div class="col-12">
+        <h1 class="display-5 fw-bold mb-3">404</h1>
+        <p>Page not found. Would you like to...</p>
+        <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">Go Home</a>
+        <p class="mt-5">{{error_message}}</p>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock %}
