Updated message in error 404 to give a message in Spanish

--- a/spanresources/templates/404.html
+++ b/spanresources/templates/404.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-12">
         <h1 class="display-5 fw-bold mb-3">404</h1>
-        <p>Page not found. Would you like to...</p>
+        <p>No hemos encontrado la página. Lo sentimos. Page not found. Would you like to...</p>
         <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">Go Home</a>
         <p class="mt-5">{{error_message}}</p>
       </div>
