--- a/spanresources/templates/405.html
+++ b/spanresources/templates/405.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-12">
         <h1 class="display-5 fw-bold mb-3">405</h1>
-        <p>Looks like something went wrong. Would you like to...</p>
+        <p>Ha habido un problema. Lo sentimos. Looks like something went wrong. Would you like to...</p>
         <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">Go Home</a>
         <p class="mt-5">{{error_message}}</p>
       </div>
