Added Spanish phrase to the error message for page 408 for error

--- a/spanresources/templates/408.html
+++ b/spanresources/templates/408.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-12">
         <h1 class="display-5 fw-bold mb-3">408</h1>
-        <p>Looks like a bad request. Oops!</p>
+        <p>Vaya, parece que eso no vale. Looks like a bad request. Oops!</p>
         <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">Go Home</a>
         <p class="mt-5">{{error_message}}</p>
       </div>
