Added description of error 408 in the page for error 408

--- a/spanresources/templates/408.html
+++ b/spanresources/templates/408.html
@@ -1,4 +1,13 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+
+{# 
+    408 Request Timeout:
+    This error means the server timed out waiting for the client to complete the request.
+    It usually happens when a client takes too long to send a full request.
+    Common causes: slow internet, network issues, or the user just walked away mid-request.
+  #}
+
+{% block content %}
 <section>
   <div class="container mt-5 text-center">
     <div class="row">
