Added description of what a 500 error generally is as a reminder to myself

--- a/spanresources/templates/500.html
+++ b/spanresources/templates/500.html
@@ -1,4 +1,14 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+
+{# 
+    500 Internal Server Error:
+    This error indicates that something has gone wrong on the servers end,
+    but the server cannot be more specific about the issue.
+    Common causes: bugs in the server-side code, failed database operations,
+    or unhandled exceptions during request processing.
+  #}
+
+{% block content %}
 <section>
   <div class="container mt-5 text-center">
     <div class="row">
