I added phrase in Spanish to the error message in English for the user

--- a/spanresources/templates/500.html
+++ b/spanresources/templates/500.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-12">
         <h1 class="display-5 fw-bold mb-3">500</h1>
-        <p>Looks like something went wrong. Would you like to...</p>
+        <p>Algo ha salido mal... Looks like something went wrong. Would you like to...</p>
         <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">Go Home</a>
         <p class="mt-5">{{error_message}}</p>
       </div>
