Adding sections in admin page for the different parts of the admin panel

--- a/spanresources/templates/admin.html
+++ b/spanresources/templates/admin.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %} 
-
+{% set active_page = "admin" %}
 {% block content %}
+{{ ckeditor.load() }}
+<section>
 
+</section>
+<section>
+
+</section>
+<section>
+
+</section>
+<section>
+
+</section>
 {% endblock %}
