Add small hero section with 'Admin Page!' heading

--- a/spanresources/templates/admin.html
+++ b/spanresources/templates/admin.html
@@ -11,9 +11,15 @@
     #}
 
 {{ ckeditor.load() }}
-<section>
 
+<section class="px-4 py-5 text-center small-hero bg-image">
+    <div class="row">
+      <h1 class="display-5 fw-bold mb-3">
+        Admin <span class="focus-text">Page!</span>
+      </h1>
+    </div>
 </section>
+
 <section>
 
 </section>
