--- a/spanresources/templates/admin.html
+++ b/spanresources/templates/admin.html
@@ -39,6 +39,21 @@
 </section>
 
 <section>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="sub-title">Edit Posts</h2>
+          <a href="{{ url_for('posts_list') }}" class="btn btn-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+            </svg> Edit Posts
+          </a>
+        </div>
+      </div>
+    </div>
+</section>
+
+<section>
 
 </section>
 <section>
