--- a/spanresources/templates/edit-post.html
+++ b/spanresources/templates/edit-post.html
@@ -1,5 +1,35 @@
-{% extends "base.html" %} 
-
+{% extends "base.html" %}
 {% block content %}
+<!-- Invoke CKEditor -->
+{{ ckeditor.load() }}
+  <!-- Hero Section -->
+  <section class="px-4 py-5 text-center small-hero bg-image">
+    <div class="row">
+      <h1 class="display-5 fw-bold mb-3">
+        Edit <span class="focus-text">{{ post.title }}</span>
+      </h1>
+    </div>
+  </section>
+  <!-- Form to edit content -->
+  <section class="container">
+    <form action="{{url_for('edit_post', id=post.id)}}" method="POST">
+      <fieldset>
+        <legend><h2 class="sub-title">Edit Post</h2></legend>
 
+        {{ form.hidden_tag() }}
+
+        {{ form.title.label }}
+        {{ form.title(class="form-control mt-3 mb-3", value=post.title) }}
+
+        {{ form.preview.label }}
+        {{ form.preview(class="form-control mt-3 mb-3", value=post.preview) }}
+
+        {{ form.content.label(class="mb-3") }}
+        {{ form.content(class="form-control") }}
+        
+        {{ form.submit(class="btn btn-primary mt-3") }}
+
+      </fieldset>
+    </form>
+  </section>
 {% endblock %}
