--- a/spanresources/templates/edit-profile.html
+++ b/spanresources/templates/edit-profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+  <!-- Hero Section -->
 <section class="px-4 py-5 text-center small-hero bg-image">
   <div class="row">
     <h1 class="display-5 fw-bold mb-3">
@@ -8,6 +9,7 @@
     </h1>
   </div>
 </section>
+<!-- Form to edit content -->
 <section class="edit-profile container">
   <div class="row">
     <div class="col-12">
