code in login page to allow users to login and add posts, etc

--- a/spanresources/templates/login.html
+++ b/spanresources/templates/login.html
@@ -1,5 +1,36 @@
-{% extends "base.html" %} 
-
+{% extends "base.html" %}
+{% set active_page = "login" %}
 {% block content %}
+  <!-- Hero Section -->
+  <section class="px-4 py-5 text-center small-hero bg-image">
+    <div class="row">
+      <h1 class="display-5 fw-bold mb-3">
+        Login to your <span class="focus-text">account</span>
+      </h1>
+    </div>
+    <div class="row mt-5">
+      <div class="col-12 text-center">
+        <!-- Redirect for user to register if they don't have an account -->
+        <p class="mb-3">Don't have an account?</p>
+        <a class="btn btn-primary" href="{{ url_for('register') }}">Register</a>
+      </div>
+    </div>
+  </section>
+  <div class="container">
+    <form method="POST" action="{{ url_for('login') }}">
+      <fieldset>
+        <legend class="sub-title">Login</legend>
+        
+        {{ form.hidden_tag() }}
+        
+        {{ form.username.label }}
+        {{ form.username(class="form-control mt-3 mb-3") }}
+        
+        {{ form.password.label }}
+        {{ form.password(class="form-control mt-3 mb-3") }}
 
+        {{ form.submit(class="btn btn-primary mt-3") }}
+      </fieldset>
+    </form>
+  </div>
 {% endblock %}
