Added comment in edit post to remind myself what CKEditor is for

--- a/spanresources/templates/edit-post.html
+++ b/spanresources/templates/edit-post.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- Invoke CKEditor -->
+<!-- Invoke CKEditor to be able to access rich text formating-->
 {{ ckeditor.load() }}
   <!-- Hero Section -->
   <section class="px-4 py-5 text-center small-hero bg-image">
