Added heading with hero image in message

--- a/spanresources/templates/messages.html
+++ b/spanresources/templates/messages.html
@@ -2,4 +2,13 @@
 
 {% block content %}
 
+<!-- Hero Section -->
+<section class="px-4 py-5 text-center small-hero bg-image">
+    <div class="row">
+      <h1 class="display-5 fw-bold mb-3">
+        Messages <span class="focus-text">for you!</span>
+      </h1>
+    </div>
+</section>
+
 {% endblock %}
