--- a/spanresources/templates/messages.html
+++ b/spanresources/templates/messages.html
@@ -11,4 +11,59 @@
     </div>
 </section>
 
+<!-- Messages Display -->
+<section class="container">
+    <div class="row">
+      <div class="col-12">
+        <h2 class="sub-title">Messages</h2>
+        <ul class="message-list mt-3">
+          <!-- Check if there are any messages -->
+          {% if messages|length > 0 %}
+            <!-- Loop through the messages to format and display them -->
+            {% for message in messages %}
+              <li class="mb-3">
+                <div class="row">
+                  <div class="col-6">
+                    <h3>{{ message.title }}</h3>
+                    <p><span class="focus-text">Sent by:</span> {{ message.name }}</p>
+                    <p>{{ message.email }}</p>
+                  </div>
+                  <div class="col-6 position-relative">
+                    <p class="mt-1 mb-3">{{ message.content }}</p>
+                    <button class="btn btn-danger delete-button">
+                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd"/>
+                      </svg> Delete Message
+                    </button>
+                    <div class="delete-confirm hide">
+                      <p>Are you sure you want to delete this Comment?</p>
+                      <div class="row">
+                        <div class="col-6">
+                          <a
+                            class="btn btn-danger"
+                            href="{{ url_for('delete_message', id=message.id) }}"
+                          >
+                            Yes, delete it!
+                          </a>
+                        </div>
+                        <div class="col-6">
+                          <button class="btn btn-primary cancel-delete">
+                            No, keep it!
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr />
+              </li>
+            {% endfor %}
+          <!-- If no messages -->
+          {% else %}
+            <p>No messages...</p>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </section>
 {% endblock %}
