Added section for the posts in post list page

--- a/spanresources/templates/post-list.html
+++ b/spanresources/templates/post-list.html
@@ -2,4 +2,12 @@
 
 {% block content %}
 
+<section class="px-4 py-5 text-center small-hero bg-image">
+    <div class="row">
+      <h1 class="display-5 fw-bold mb-3">
+        Edit or Delete <span class="focus-text">Posts</span>
+      </h1>
+    </div>
+</section>
+
 {% endblock %}
