--- a/spanresources/templates/post-list.html
+++ b/spanresources/templates/post-list.html
@@ -1,13 +1,87 @@
-{% extends "base.html" %} 
-
+{% extends "base.html" %}
 {% block content %}
-
-<section class="px-4 py-5 text-center small-hero bg-image">
+  <section class="px-4 py-5 text-center small-hero bg-image">
     <div class="row">
       <h1 class="display-5 fw-bold mb-3">
-        Edit or Delete <span class="focus-text">Artículos</span>
+        Edit or Delete <span class="focus-text">Posts</span>
       </h1>
     </div>
-</section>
-
+  </section>
+  <section>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="sub-title">Blog Posts</h2>
+          <ul class="blog-list mt-3">
+            <!-- Check for posts -->
+            {% if posts|length > 0 %}
+            <!-- Loop through the posts to format and display them -->
+              {% for post in posts %}
+              <li class="p-2 mt-1 mb-1">
+                <div class="row">
+                  <div class="col-8 pt-2 pb-5">
+                    <h3 class="pt-3 mb-3">{{ post.title }}</h3>
+                    {{ post.preview|truncate(50,true,'...')|safe }}
+                  </div>
+                  <div
+                    class="col-4 d-flex flex-column justify-content-center position-relative"
+                  >
+                    <a
+                      href="{{ url_for('edit_post', id=post.id) }}"
+                      class="btn btn-primary mb-3"
+                      >
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+                      </svg> Edit Post
+                    </a>
+                    <button class="btn btn-danger delete-button">
+                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd"/>
+                      </svg> Delete Post
+                    </button>
+                    <div class="delete-confirm hide">
+                      <p>Are you sure you want to delete this post?</p>
+                      <div class="row">
+                        <div class="col-6">
+                          <a
+                            class="btn btn-danger"
+                            href="{{ url_for('delete_post', id=post.id) }}"
+                          >
+                            Yes, delete it!
+                          </a>
+                        </div>
+                        <div class="col-6">
+                          <button class="btn btn-primary cancel-delete">
+                            No, keep it!
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              {% endfor %}
+              <!-- If there are no posts to show -->
+              {% else %}
+              <li class="p-2 mt-1 mb-1">
+                <p>No posts to show</p>
+              </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 page-buttons">
+          <!-- Check if there is a previous page to show -->
+          {% if prev_url %}
+          <a class="btn btn-primary" href="{{ prev_url }}">Newer posts</a>
+          {% endif %}
+          <!-- Check if there is a next page to show -->
+          {% if next_url %}
+          <a class="btn btn-primary" href="{{ next_url }}">Older posts</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
