--- a/spanresources/static/css/style.css
+++ b/spanresources/static/css/style.css
@@ -5,6 +5,138 @@
   https://www.digitalocean.com/community/tutorials/css-minimal-css-reset
 */
 
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* End of CSS Reset */
+
+/* Global Styles */
+
+.alert-dismissible .btn-close {
+  padding-top: 0;
+}
+
+.bg-image {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.sub-title {
+  font-size: 0.875rem;
+  margin-bottom: 1.875rem;
+}
+
+.focus-text {
+  color: #eb5939;
+}
+
+.btn-primary {
+  background-color: #b7ab98;
+  border: none;
+  transition: background-color 0.3s ease-out;
+  color: #0d0d0d;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+}
+
+.btn-primary svg {
+  width: 20px;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  display: inline;
+}
+
+.btn-primary:hover {
+  background-color: #eb5939;
+  color: #0d0d0d;
+}
+
+.small-hero {
+  background-image: url('../img/abstract-bg.webp');
+  position: relative;
+  margin-bottom: 5rem;
+}
+
+.small-hero:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+
+.small-hero > * {
+  position: relative;
+  z-index: 2;
+}
+
+.btn-danger {
+  background-color: #eb5939;
+  border: none;
+  transition: background-color 0.3s ease-out;
+  color: #0d0d0d;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  transition: all 0.3s ease-out;
+}
+
+.btn-danger:hover {
+  background-color: #b7ab98;
+  color: #eb5939;
+}
+
+.hide {
+  display: none !important;
+  pointer-events: none;
+}
+
+/* End of Global Styles */
+
 
 /* Navbar Styles */
 
