added email in footer

--- a/spanresources/templates/footer.html
+++ b/spanresources/templates/footer.html
@@ -38,7 +38,7 @@
             <li>
               <h3>Email</h3>
               <a href="mailto:lidia@languagestore.co.uk"
-                >jaimie.j.hemmings@gmail.com</a
+                >lidia@languagestore.co.uk</a
               >
             </li>
             <li>
