Adding text to the welcome page to give an insight into my experience

--- a/spanresources/templates/index.html
+++ b/spanresources/templates/index.html
@@ -138,10 +138,10 @@
           <p>
             Years of experience
             <span class="focus-text">
-              designing full fledged web applications
+              teaching Spanish and English to students learning 
             </span>
-            in a variety of technologies including JavaScript, Python, React,
-            Next.JS, Django
+            for a variety of reasons, holidays, talking to family, work and more
+            including self-development.
           </p>
         </div>
       </div>
