--- a/spanresources/templates/base.html
+++ b/spanresources/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>CI/Scoop{% if title %} - {{ title }}{% endif %}</title>
+    <title>Spanish Resources{% if title %} - {{ title }}{% endif %}</title>
 
     <link
       rel="shortcut icon"
