--- a/spanresources/templates/navbar.html
+++ b/spanresources/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="{{ url_for('home') }}">CI/Scoop</a>
+    <a class="navbar-brand" href="{{ url_for('home') }}">Spanish Resources</a>
     <button
       class="navbar-toggler"
       type="button"
