--- a/spanresources/static/css/style.css
+++ b/spanresources/static/css/style.css
@@ -143,7 +143,7 @@ img {
 body {
     padding-top: 56px;
     background: #6421BA;
-    color: #ba2177;
+    color: ##eb5939;
   }
   
   body nav.fixed-top {
