--- a/spanresources/static/css/style.css
+++ b/spanresources/static/css/style.css
@@ -367,7 +367,7 @@ footer {
   }
   
   ul.footer-socials li a {
-    color: #ba2177;
+    color: #eb5939;
     font-size: 1.5rem;
     text-decoration: none;
     font-size: 2.5rem;
